# physika

./: .gitignore  README.md  codegen.py  execute.py  gen_refs.py  lexer.py  parser.out  parser.py  parsetab.py  pyproject.toml  runtime.py  sample.ast  setup.py  type_checker.py  utils.py
docs/: api.rst  cic.rst  conf.py  elf.rst  examples.rst  index.rst  install.rst  language.rst  motivation.rst
examples/: dft_atoms.phyk  dft_density.phyk  dft_energies.phyk  dft_operators.phyk  dft_potentials.phyk  dft_run.phyk  dft_scf.phyk  dft_xc.phyk  diff_for.phyk  diff_functions.phyk  diff_ifelse.phyk  diff_sincos.phyk  diff_threshold.phyk  example_arrays.phyk  example_boolean_operator.phyk  example_check_gradients.phyk  example_complex.phyk  example_declarations.phyk  example_fft.phyk  example_gpu_support.phyk  example_import_statement.phyk  example_jacobians.phyk  example_matrices.phyk  example_numeric_types.phyk  example_slicing.phyk  example_symbolic.phyk  example_tensors.phyk  example_test_gpu.phyk  factorial.phyk  fft_dft_operators.phyk  for.phyk  for_classes.phyk  greek_letter_and_scientific_notation.phyk  harmonic_oscillator.phyk  hnn.phyk  if_else_contexts.phyk  integer_modulo_two.phyk  ising.phyk  networks.phyk  pendulum_rk4.phyk  (+5 more)
physika/: codegen.py  elf.py  execute.py  import_manager.py  lexer.py  parser.py  runtime.py  type_checker.py  z2.py
physika.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_arrays.py  test_codegen.py  test_complex.py  test_declarations.py  test_dft.py  test_dft_atoms.py  test_dft_density.py  (+18 more)
(+217 files in other folders)
