[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physika"
version = "0.1.0"
requires-python = ">=3.9"

[project.scripts]
physika = "physika.execute:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "yapf",
    "toml",
    "mypy",
    "flake8"
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 79

[tool.yapfignore]
ignore_patterns = [
    "examples/**",
    "parsetab.py",
    "parser.out",
    "**/*.egg-info/**",
    "build/**",
]