[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.yapf]
based_on_style = "pep8"
column_limit = 79

[tool.yapfignore]
ignore_patterns = [
    "examples/**",
    "tutorials/**",
    "parsetab.py",
    "parser.out",
    "**/*.egg-info/**",
    "build/**",
]